fix(az-button): 🐛 remove vertical-align

--- a/src/components/button/az-button.styl
+++ b/src/components/button/az-button.styl
@@ -1,8 +1,6 @@
 az-button {
   display: inline-block;
   line-height: 1;
-  vertical-align: middle;
-  vertical-align: -webkit-baseline-middle;
   border-radius: var(--az-border-radius-mini);
 }
 az-button button {
